--- a/frontend/src/styles/login.css
+++ b/frontend/src/styles/login.css
@@ -1,9 +1,65 @@
+.dialog{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin: 50px;
+    background: rgb(75, 6, 66);
+    border-radius: 1em;
+}
+
+.RadioHandle{
+    display: flex;
+    align-items: center;
+    margin: 5px auto;
+}
+
+.RadioHandle label{
+    margin:10px;
+}
+
+.LogDialog{
+    display: flex;
+    align-items: center; 
+}
+
+h2{
+    text-align: center;
+}
+
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form button{
+    margin: 5px;
+    width: 50%;
+    height: 2.2em;
+    border-radius: 20%;
+    background: gray
+}
+
+.handler{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.handler *{
+    margin: 5px;
+}
+
+input{
+    background: rgb(26, 26, 26) ;
+}
+
 input:focus {
   outline: none;
 }
 
 input:invalid{
-    border: 2px solid purple;
+    border: 2px solid rgb(128, 0, 38);
 }
 
 .erol{
@@ -12,8 +68,8 @@ input:invalid{
 
 [type="password"]:invalid + .erol{
    display: block;
-   font-size: 8px;
-   color: purple;
+   font-size: 90%;
+   color: rgb(128, 0, 38);
 }
 
 [type="radio"]{
@@ -35,3 +91,5 @@ label:hover{
 .RadioHandle:has(#auth_radio:checked) ~ #Authorize{
     display: block;
 }
+
+
